Fix animated image overflow

--- a/style.css
+++ b/style.css
@@ -64,6 +64,8 @@ body {
   }
   
   #content {
+    width: 100%;
+    height: 100%;
     max-width: 800px;
     margin: 5vh auto 0 auto;   /* start 10% from the top */
     padding: 20px 10px;
@@ -202,6 +204,17 @@ body {
   transform: translate(-50%, -50%);
   position: absolute;
   pointer-events: none;
+}
+
+#animation-layer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none; /* so clicks pass through */
+  z-index: 1000;
 }
 
 #background-layer {
